--- a/SherpaDesk/AddTime.xaml
+++ b/SherpaDesk/AddTime.xaml
@@ -65,7 +65,7 @@
 
                 <TextBlock HorizontalAlignment="left" Grid.Row="1" Margin="10,25,0,0" TextWrapping="Wrap" Text="Technician" VerticalAlignment="Top" FontSize="30"/>
                 <ComboBox Grid.Column="0" Grid.Row="2" FontSize="24" HorizontalAlignment="Left" Width="500" Height="50" Margin="10,0,0,0" VerticalAlignment="Top">
-                    <ComboBoxItem Content="Administrator, Organization" />
+                    <ComboBoxItem x:Name="TechnicianMe" />
                     <ComboBoxItem Content="Queue, New Tickets" />
                 </ComboBox>
 
@@ -105,23 +105,14 @@
 
                     <TextBlock HorizontalAlignment="left" Grid.Row="0" Grid.Column="1" Margin="0,25,0,0" TextWrapping="Wrap" Text="Start" VerticalAlignment="Top" FontSize="30"/>
                     <TextBlock HorizontalAlignment="left" Grid.Row="0" Grid.Column="1" Margin="70,30,0,0" TextWrapping="Wrap" Text="hh:mm" VerticalAlignment="Top" FontSize="20"/>
-                    <TextBox x:Name="StartTime" Margin="0,0,0,0" HorizontalAlignment="Center" Height="100" Grid.Row="1" TextWrapping="Wrap" Grid.Column="1" Text="" VerticalAlignment="Top" FontSize="24" Width="130" />
-                    <ComboBox x:Name="AMPM" Grid.Column="3" Grid.Row="1" FontSize="36" HorizontalAlignment="Left" Width="130" Height="100" Margin="0,0,0,0" VerticalAlignment="Top">
-                        <ComboBoxItem Content="AM" />
-                        <ComboBoxItem Content="PM" />
-                    </ComboBox>
+                    <TimePicker x:Name="StartTime" Grid.Column="1" HorizontalAlignment="Left" Margin="0,0,0,0" Grid.Row="1" VerticalAlignment="Top" ClockIdentifier="12HourClock" FontSize="36"/>
 
                     <TextBlock HorizontalAlignment="left" Grid.Row="0" Grid.Column="5" Margin="0,25,0,0" TextWrapping="Wrap" Text="Stop" VerticalAlignment="Top" FontSize="30"/>
                     <TextBlock HorizontalAlignment="left" Grid.Row="0" Grid.Column="5" Margin="70,30,0,0" TextWrapping="Wrap" Text="hh:mm" VerticalAlignment="Top" FontSize="20"/>
-                    <TextBox x:Name="EndTime" Margin="0,0,0,0" HorizontalAlignment="Center" Height="100" Grid.Row="1" TextWrapping="Wrap" Grid.Column="5" Text="" VerticalAlignment="Top" FontSize="24" Width="130" />
-                    <ComboBox x:Name="EndTimeAMPM" Grid.Column="7" Grid.Row="1" FontSize="36" HorizontalAlignment="Left" Width="130" Height="100" Margin="0,0,0,0" VerticalAlignment="Top">
-                        <ComboBoxItem Content="AM" />
-                        <ComboBoxItem Content="PM" />
-                    </ComboBox>
-
+                    
+                    <TimePicker x:Name="EndTime" Grid.Column="5" HorizontalAlignment="Left" Margin="0,0,0,0" Grid.Row="1" VerticalAlignment="Top" ClockIdentifier="12HourClock" FontSize="36"/>
                     <TextBlock HorizontalAlignment="left" Grid.Row="0" Grid.Column="9" Margin="0,25,0,0" TextWrapping="Wrap" Text="Hours" VerticalAlignment="Top" FontSize="30"/>
-                    <TextBox Margin="0,0,0,0" InputScope="NumberFullWidth" Text="0.00" HorizontalAlignment="Center" Height="100" Grid.Row="1" TextWrapping="Wrap" Grid.Column="9" VerticalAlignment="Top" FontSize="30" Width="130" />
-
+                    <TextBox Margin="0,0,0,0" InputScope="NumberFullWidth" Text="0.00" HorizontalAlignment="Center" Height="48" Grid.Row="1" TextWrapping="Wrap" Grid.Column="9" VerticalAlignment="Top" FontSize="30" Width="130" />
                 </Grid>
                 <Button Content="Save My Time" Grid.Column="2" HorizontalAlignment="Left" Grid.Row="8" VerticalAlignment="Top" Height="70" Grid.RowSpan="2" Width="500" FontSize="36" Background="#FF2F9129"/>
             </Grid>
