--- a/SherpaDesk/MainPage.xaml
+++ b/SherpaDesk/MainPage.xaml
@@ -5,7 +5,7 @@
     xmlns:local="using:SherpaDesk"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+    mc:Ignorable="d" Loaded="Page_Loaded">
     <Grid Background="#FF004174">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
@@ -30,7 +30,7 @@
             <Button x:Name="LoginNameButton" Grid.Column="1" Content="LastName, FirstName" Margin="0,0,0,0" FontSize="20" VerticalAlignment="Top" RenderTransformOrigin="0,0" Foreground="White" Background="#FF004174" BorderBrush="#FF004174" FontWeight="Normal">
                 <Button.Flyout>
                     <MenuFlyout>
-                        <MenuFlyoutItem x:Name="MyProfileMenu" Text="My Profile" />
+                        <MenuFlyoutItem x:Name="MyProfileMenu" Text="My Profile" Click="MyProfileMenu_Click" />
                         <MenuFlyoutItem x:Name="LogOutMenu" Text="Log Out" Click="LogOutMenu_Click" />
                     </MenuFlyout>
                 </Button.Flyout>                
