--- a/SherpaDesk/UpdateProfile.xaml
+++ b/SherpaDesk/UpdateProfile.xaml
@@ -9,7 +9,7 @@
     xmlns:Controls="using:WinRTXamlToolkit.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+    mc:Ignorable="d" Loaded="pageRoot_Loaded">
 
     <Page.Resources>
 
