--- a/SherpaDesk/UpdateProfile.xaml
+++ b/SherpaDesk/UpdateProfile.xaml
@@ -65,22 +65,23 @@
                 </Grid.ColumnDefinitions>
 
                 <TextBlock HorizontalAlignment="right" Grid.Column="1" Grid.Row="0" TextWrapping="Wrap" Text="Login/Email*" Margin="10,4,10,0" VerticalAlignment="Top" FontSize="36"/>
-                <TextBox Grid.Column="2" HorizontalAlignment="Left" FontSize="28" Width="500" Height="50" Margin="0,0,0,0" TextWrapping="NoWrap" VerticalAlignment="Top"/>
+                <TextBox x:Name="LoginTextBox" Grid.Column="2" HorizontalAlignment="Left" FontSize="28" Width="500" Height="50" Margin="0,0,0,0" TextWrapping="NoWrap" VerticalAlignment="Top"/>
 
                 <TextBlock HorizontalAlignment="right" Grid.Column="1" Grid.Row="1" TextWrapping="Wrap" Text="First Name*" Margin="10,4,10,0" VerticalAlignment="Top" FontSize="36"/>
-                <TextBox Grid.Column="2" Grid.Row="1" HorizontalAlignment="Left" FontSize="28" Width="500" Height="50" Margin="0,0,0,0" TextWrapping="NoWrap" VerticalAlignment="Top"/>
+                <TextBox x:Name="FirstNameTextBox" Grid.Column="2" Grid.Row="1" HorizontalAlignment="Left" FontSize="28" Width="500" Height="50" Margin="0,0,0,0" TextWrapping="NoWrap" VerticalAlignment="Top"/>
 
                 <TextBlock HorizontalAlignment="right" Grid.Column="1" Grid.Row="2" TextWrapping="Wrap" Text="Last Name*" Margin="10,4,10,0" VerticalAlignment="Top" FontSize="36"/>
-                <TextBox Grid.Column="2" Grid.Row="2" HorizontalAlignment="Left" FontSize="28" Width="500" Height="50" Margin="0,0,0,0" TextWrapping="NoWrap" VerticalAlignment="Top"/>
+                <TextBox x:Name="LastNameTextBox" Grid.Column="2" Grid.Row="2" HorizontalAlignment="Left" FontSize="28" Width="500" Height="50" Margin="0,0,0,0" TextWrapping="NoWrap" VerticalAlignment="Top"/>
 
                 <TextBlock HorizontalAlignment="right" Grid.Column="1" Grid.Row="3" TextWrapping="Wrap" Text="Title" Margin="10,4,10,0" VerticalAlignment="Top" FontSize="36"/>
-                <TextBox Grid.Column="2" Grid.Row="3" HorizontalAlignment="Left" FontSize="28" Width="500" Height="50" Margin="0,0,0,0" TextWrapping="NoWrap" VerticalAlignment="Top"/>
+                <TextBox x:Name="TitleTextBox" Grid.Column="2" Grid.Row="3" HorizontalAlignment="Left" FontSize="28" Width="500" Height="50" Margin="0,0,0,0" TextWrapping="NoWrap" VerticalAlignment="Top"/>
 
                 <TextBlock HorizontalAlignment="right" Grid.Column="1" Grid.Row="4" TextWrapping="Wrap" Text="Phone" Margin="10,4,10,0" VerticalAlignment="Top" FontSize="36"/>
-                <TextBox Grid.Column="2" Grid.Row="4" HorizontalAlignment="Left" FontSize="28" Width="500" Height="50" Margin="0,0,0,0" TextWrapping="NoWrap" VerticalAlignment="Top"/>
+                <TextBox x:Name="PhoneTextBox" Grid.Column="2" Grid.Row="4" HorizontalAlignment="Left" FontSize="28" Width="500" Height="50" Margin="0,0,0,0" TextWrapping="NoWrap" VerticalAlignment="Top"/>
 
+                
                 <TextBlock HorizontalAlignment="right" Grid.Column="1" Grid.Row="5" TextWrapping="Wrap" Text="Mobile Phone" Margin="10,4,10,0" VerticalAlignment="Top" FontSize="36"/>
-                <TextBox Grid.Column="2" Grid.Row="5" HorizontalAlignment="Left" FontSize="28" Width="500" Height="50" Margin="0,0,0,0" TextWrapping="NoWrap" VerticalAlignment="Top"/>
+                <TextBox x:Name="MobilePhoneTextBox" Grid.Column="2" Grid.Row="5" HorizontalAlignment="Left" FontSize="28" Width="500" Height="50" Margin="0,0,0,0" TextWrapping="NoWrap" VerticalAlignment="Top"/>
 
                 <TextBlock HorizontalAlignment="left" Grid.Column="1" Grid.Row="6" TextWrapping="Wrap" Text="Password" Margin="10,20,10,0" VerticalAlignment="Top" FontSize="36" FontWeight="Bold"/>
 
