--- a/SherpaDesk/OpenTickets.xaml
+++ b/SherpaDesk/OpenTickets.xaml
@@ -25,7 +25,8 @@
     <Grid Style="{StaticResource LayoutRootStyle}" Background="#FF004174">
         <Grid.RowDefinitions>
             <RowDefinition Height="140"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="315*"/>
+            <RowDefinition Height="313*"/>
         </Grid.RowDefinitions>
 
         <!-- Back button and page title -->
@@ -37,7 +38,7 @@
             <Button x:Name="backButton" Click="GoHome" Style="{StaticResource BackButtonStyle}"/>
             <TextBlock x:Name="pageTitle" Grid.Column="1" Style="{StaticResource PageHeaderTextStyle}" Text="Open Tickets" FontWeight="Normal"/>
         </Grid>
-        <Grid Style="{StaticResource LayoutRootStyle}" Background="#FF1B3467" Grid.Row="1" Height="60">
+        <Grid Style="{StaticResource LayoutRootStyle}" Background="#FF1B3467" Grid.Row="1" Height="60" VerticalAlignment="Top">
             <Grid.RowDefinitions>
                 <RowDefinition Height="60"/>
                 <RowDefinition Height="auto"/>
@@ -60,11 +61,12 @@
             <TextBlock HorizontalAlignment="Left" Margin="0,0,0,0" Grid.Column="5" Grid.Row="0" TextWrapping="Wrap" FontSize="25" Text="Class" VerticalAlignment="Center"/>
             <TextBlock HorizontalAlignment="Left" Margin="0,0,0,0" Grid.Column="6" Grid.Row="0" TextWrapping="Wrap" FontSize="25" Text="Time" VerticalAlignment="Center"/>
             <TextBlock HorizontalAlignment="Left" Margin="0,0,0,0" Grid.Column="7" Grid.Row="0" TextWrapping="NoWrap" FontSize="25" Text="Days Old | Status" VerticalAlignment="Center"/>
-            <ScrollViewer HorizontalAlignment="Left" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" Grid.Row="1" Height="auto" VerticalAlignment="Top" Width="auto">
-                <ListView x:Name="itemListView">
-                    <ListView.ItemTemplate>
+        </Grid>
+        <ScrollViewer HorizontalAlignment="Left" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" Grid.Row="1" Height="auto" VerticalAlignment="Top" Width="auto" Grid.RowSpan="2" Margin="0,60,0,0">
+            <ListView x:Name="itemListView" ItemsSource="{Binding}" Height="auto">
+                <ListView.ItemTemplate>
                     <DataTemplate>
-                        <Grid Style="{StaticResource LayoutRootStyle}" Background="Transparent">
+                        <Grid Style="{StaticResource LayoutRootStyle}"  Background="Transparent">
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="60"/>
                             </Grid.RowDefinitions>
@@ -78,19 +80,19 @@
                                 <ColumnDefinition Width="auto"/>
                                 <ColumnDefinition Width="auto"/>
                             </Grid.ColumnDefinitions>
-                            <TextBlock HorizontalAlignment="Left" Margin="40,0,40,0" Grid.Column="1" Grid.Row="0" TextWrapping="Wrap" FontSize="30" Text="Tkt#1" VerticalAlignment="Center"/>
-                            <TextBlock HorizontalAlignment="Left" Margin="40,0,40,0" Grid.Column="2" Grid.Row="0" TextWrapping="Wrap" FontSize="30" Text="End User" VerticalAlignment="Center"/>
-                            <TextBlock HorizontalAlignment="Left" Margin="40,0,40,0" Grid.Column="3" Grid.Row="0" TextWrapping="Wrap" FontSize="30" Text="Tech Name" VerticalAlignment="Center"/>
-                            <TextBlock HorizontalAlignment="Left" Margin="40,0,40,0" Grid.Column="4" Grid.Row="0" TextWrapping="Wrap" FontSize="30" Text="Account" VerticalAlignment="Center"/>
-                            <TextBlock HorizontalAlignment="Left" Margin="40,0,40,0" Grid.Column="5" Grid.Row="0" TextWrapping="Wrap" FontSize="30" Text="Class" VerticalAlignment="Center"/>
-                            <TextBlock HorizontalAlignment="Left" Margin="40,0,40,0" Grid.Column="6" Grid.Row="0" TextWrapping="Wrap" FontSize="30" Text="Time" VerticalAlignment="Center"/>
-                            <TextBlock HorizontalAlignment="Left" Margin="40,0,40,0" Grid.Column="7" Grid.Row="0" TextWrapping="Wrap" FontSize="30" Text="Days Old | Status" VerticalAlignment="Center"/>
+                            <TextBlock HorizontalAlignment="Left" Margin="40,0,40,0" Grid.Column="1" Grid.Row="0" TextWrapping="Wrap" FontSize="30" Text="{Binding TicketId}" VerticalAlignment="Center"/>
+                            <TextBlock HorizontalAlignment="Left" Margin="40,0,40,0" Grid.Column="2" Grid.Row="0" TextWrapping="Wrap" FontSize="30" Text="{Binding UserFullName}" VerticalAlignment="Center"/>
+                            <TextBlock HorizontalAlignment="Left" Margin="40,0,40,0" Grid.Column="3" Grid.Row="0" TextWrapping="Wrap" FontSize="30" Text="{Binding TechnicianFullName}" VerticalAlignment="Center"/>
+                            <TextBlock HorizontalAlignment="Left" Margin="40,0,40,0" Grid.Column="4" Grid.Row="0" TextWrapping="Wrap" FontSize="30" Text="{Binding AccountName}" VerticalAlignment="Center"/>
+                            <TextBlock HorizontalAlignment="Left" Margin="40,0,40,0" Grid.Column="5" Grid.Row="0" TextWrapping="Wrap" FontSize="30" Text="{Binding ClassName}" VerticalAlignment="Center"/>
+                            <TextBlock HorizontalAlignment="Left" Margin="40,0,40,0" Grid.Column="6" Grid.Row="0" TextWrapping="Wrap" FontSize="30" Text="{Binding СreatedTime}" VerticalAlignment="Center"/>
+                            <TextBlock HorizontalAlignment="Left" Margin="40,0,40,0" Grid.Column="7" Grid.Row="0" TextWrapping="Wrap" FontSize="30" Text="{Binding Status}" VerticalAlignment="Center"/>
                         </Grid>
                     </DataTemplate>
                 </ListView.ItemTemplate>
-                </ListView>
-            </ScrollViewer>
-        </Grid>
+            </ListView>
+        </ScrollViewer>
+
         <VisualStateManager.VisualStateGroups>
 
             <!-- Visual states reflect the application's view state -->
